added netlify and linkedin links

--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
                     <a href="https://x.com/jangamsudip58"><i class='bx bxl-twitter'></i></a>
                     <span></span>
                 </div>
+
+                <div class="bg-icon">
+                    <a href="https://www.linkedin.com/in/sudipjangam"><i class='bx bxl-linkedin'></i></a>
+                    <span></span>
+                </div>
+
+                <div class="bg-icon">
+                    <a href="https://app.netlify.com/teams/sudipjangam/sites"><i class='bx bxl-netlify' title="Netlify"></i></a>
+                </div>
             </div>
         </div>
         <div class="img-hero">
